Abstract most of the functionality of commands - still need to abstract VoxelCommandManager, and decide what to do with the events